--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
 
-    <link rel="stylesheet" href="./css files/container1.css" />
-    <link rel="stylesheet" href="./css files/container2.css" />
-    <link rel="stylesheet" href="./css files/container3.css" />
-    <link rel="stylesheet" href="./css files/container4.css" />
-    <link rel="stylesheet" href="./css files/container5.css" />
-    <link rel="stylesheet" href="./css files/container6.css" />
-    <link rel="stylesheet" href="./css files/footer.css" />
+    <link rel="stylesheet" href="./css-files/container1.css" />
+    <link rel="stylesheet" href="./css-files/container2.css" />
+    <link rel="stylesheet" href="./css-files/container3.css" />
+    <link rel="stylesheet" href="./css-files/container4.css" />
+    <link rel="stylesheet" href="./css-files/container5.css" />
+    <link rel="stylesheet" href="./css-files/container6.css" />
+    <link rel="stylesheet" href="./css-files/footer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
